--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "node": ">=10.3.0"
   },
   "scripts": {
-    "deno-bundle": "deno bundle src/docopt.ts dist/docopt.mjs",
-    "babel": "babel dist/docopt.mjs -o dist/docopt.cjs",
-    "prepare": "npm run deno-bundle && npm run babel"
+    "build": "tsc -p .",
+    "check": "npm run build -- --noEmit"
   },
   "repository": {
     "type": "git",
