--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "extends": "@tsconfig/deno/tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext"
+    "target": "ES2020",
+    "module": "ES2020",
+    "lib": ["ES2020"],
+    "outDir": "dist",
+    "baseUrl": "./",
+    "resolveJsonModule": false
   },
   "include": ["./src"]
 }
